samples/_failures_safe/1761564268_47b815_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8f31ed2.c: In function ‘main’:
./samples/SAFE/__tmp_c8f31ed2.c:176:9: error: ‘buffer’ undeclared (first use in this function); did you mean ‘Buffer’?
  176 |         buffer
      |         ^~~~~~
      |         Buffer
./samples/SAFE/__tmp_c8f31ed2.c:176:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c8f31ed2.c:176:15: error: expected ‘;’ at end of input
  176 |         buffer
      |               ^
      |               ;
./samples/SAFE/__tmp_c8f31ed2.c:176:9: error: expected declaration or statement at end of input
  176 |         buffer
      |         ^~~~~~
./samples/SAFE/__tmp_c8f31ed2.c:176:9: error: expected declaration or statement at end of input
